octave3.1 (3.1.54-1) UNRELEASED; urgency=low

  * New upstream development snapshot
  * debian/in/control: Build-Depend on libqrupdate-dev for octave3.1
  * debian/patches/remove-y.tab.h-in-maintainer-clean.dpatch: New patch
    for avoiding src/y.tab.h to be removed by make distclean
  * debian/rules: Do not install the enscript directory into the common
    package.  This is now obsolete

 -- Rafael Laboissiere <rafael@debian.org>  Mon, 09 Mar 2009 01:36:46 +0100

octave3.1 (3.1.53-1) experimental; urgency=low

  * New upstream development snapshot
  * Dropped patches (applied upstream):
    + debian/patches/clean-examples-subdir.dpatch
    + debian/patches/real-no-history-3.1.dpatch
    + debian/patches/visit-script-call-accept.dpatch
    + debian/patches/compile-inttypes-on-short-double-arches.dpatch

 -- Rafael Laboissiere <rafael@debian.org>  Thu, 26 Feb 2009 17:38:35 +0100

octave3.0 (1:3.0.4~rc5-1) experimental; urgency=low

  * New upstream release candidate.  Still released to experimental, since
    this version has still some issues.
  * debian/patches/proper-delete-of-axes-in-clf.dpatch: Proper deletion of
    axes in clf.m.  Fix a regression problem between version 3.0.3 and
    3.04-rc5.  Proposed by Marco Caliari in the octave-maintainers mailing
    list on 2008-02-25.

 -- Rafael Laboissiere <rafael@debian.org>  Wed, 25 Feb 2009 15:58:10 +0100

octave3.1 (3.1.52-6) experimental; urgency=low

  * debian/patches/normal-markersize.dpatch: Revert the symbol markers in
    plots to their normal size (closes: #515743).  Thanks to Francesco
    Potorti for the patch.

 -- Rafael Laboissiere <rafael@debian.org>  Tue, 24 Feb 2009 11:40:01 +0100

octave3.1 (3.1.52-5) experimental; urgency=low

  * debian/patches/compile-inttypes-on-short-double-arches.dpatch:
    Workaround gcc 4.3 explicit instantiation bug in octave_int_cmp_op.
    This was causing FTBFS on architectures with no long double type, like